--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,12 @@
 body {
-  background-color: pink;
+  background-color: #f9f7fe;
+  font-family: "Roboto", sans-serif;
+}
+.weather-app {
+  background: white;
+  border-radius: 15px;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+  margin: 45px auto;
+  max-width: 600px;
+  padding: 30px;
 }
