--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@ body {
   background-color: #f9f7fe;
   font-family: "Roboto", sans-serif;
 }
+
 .weather-app {
   background: white;
   border-radius: 15px;
@@ -9,4 +10,23 @@ body {
   margin: 45px auto;
   max-width: 600px;
   padding: 30px;
+}
+
+.search-form-input {
+  background-color: #f9f7fe;
+  border: none;
+  border-radius: 6px;
+  font-size: 16px;
+  padding: 15px 20px;
+  width: 80%;
+}
+
+.search-form-button {
+  background: pink;
+  border: none;
+  border-radius: 6px;
+  color: white;
+  font-size: 16px;
+  margin-left: 5px;
+  padding: 15px 20px;
 }
