--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,10 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+a {
+  color: pink;
+}
+
 .weather-app {
   background: white;
   border-radius: 15px;
@@ -10,6 +14,11 @@ body {
   margin: 45px auto;
   max-width: 600px;
   padding: 30px;
+}
+
+header {
+  border-bottom: 1px solid #f9f7fe;
+  padding: 0 0 30px 0;
 }
 
 .search-form-input {
@@ -29,4 +38,12 @@ body {
   font-size: 16px;
   margin-left: 5px;
   padding: 15px 20px;
+}
+
+footer {
+  border-top: 1px solid #f9f7fe;
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 13px;
+  padding: 30px 0 0 0;
+  text-align: center;
 }
