--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,8 @@ a {
   color: pink;
 }
 
+
+
 .weather-app {
   background: white;
   border-radius: 15px;
@@ -38,6 +40,15 @@ header {
   font-size: 16px;
   margin-left: 5px;
   padding: 15px 20px;
+}
+
+main {
+  padding: 30px 0;
+}
+
+.weather-app-data {
+  display: flex;
+  justify-content: space-between;
 }
 
 footer {
