--- a/src/style.css
+++ b/src/style.css
@@ -59,13 +59,33 @@ main {
 
 .weather-app-details {
   color: rgba(39, 33, 66, 0.4);
-  font-size: 24px;
+  font-size: 16px;
   font-weight: 500;
   line-height: 20px;
 }
 
 .weather-app-details strong {
   color: #f65282;
+}
+
+.weather-app-currently {
+  display: flex;
+}
+
+.weather-app-icon {
+  font-size: 44px;
+  margin-top: 22px;
+}
+
+.weather-app-temperature {
+  font-size: 88px;
+  font-weight: bold;
+  margin-left: 12px;
+}
+
+.weather-app-unit {
+  font-size: 28px;
+  margin-top: 10px;
 }
 
 footer {
