--- a/src/style.css
+++ b/src/style.css
@@ -73,19 +73,19 @@ main {
 }
 
 .weather-app-icon {
-  font-size: 44px;
-  margin-top: 22px;
+  width: 88px;
+  height: 88px;
 }
 
 .weather-app-temperature {
   font-size: 88px;
   font-weight: bold;
-  margin-left: 12px;
+  line-height: 88px;
 }
 
 .weather-app-unit {
   font-size: 28px;
-  margin-top: 10px;
+  margin-top: 8px;
 }
 
 footer {
